fix scrollbar menu sx

--- a/css/style.css
+++ b/css/style.css
@@ -7,36 +7,48 @@
 }
 body{
   font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+  
+
 }
 
 a{
     text-decoration: none;
     cursor: pointer;
+    color: white;
+    
 }
 
+
+img{
+    display: inline-block;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
 /********** REGOLE SEZIONE MAIN*********** */
 
+/********Regole macro*************/
 #main{
     display: flex;
-    height: calc(100vh - 70px);
+    height: 100vh;
+    position: relative;
+           
     /* DEBUG */
     /* background-color: chartreuse; */
 
 }
 
 .col{
-   
+   /* height: 100%; */
     /* DEBUG */
     /* background-color: blue; */
-    min-height: 300px;
+    /* min-height: 300px; */
     min-width: 200px;
 }
 
 #sx{
     width: 200px;
-    background-color: black;
+    background-color: black;    
 }
 
 #dx{
@@ -49,7 +61,7 @@ a{
     position: fixed;
     top:0;
     left:200px;
-    z-index: 500;
+    z-index: 100;
     height: 70px;
     width: calc(100% - 200px);
     background-color: rgba(0, 0, 0, 0.3);
@@ -64,17 +76,58 @@ a{
     border: 1px solid white;
     padding: 5px 20px;
     font-size: 10px;
+}
 
 
+/****** regole menu nav********* */
+nav{
+    padding: 10px;
+    color: white;
+}
+
+nav > *{
+    margin-bottom: 20px;
+}
+
+#logo{
+    width: 85%;
+    text-align: center;
+}
+
+nav li{
+    font-size: 15px;
+    margin: 10px 0;
+}
+
+#play{
+    overflow-y: auto;
+    height:calc( 100% - 300px) ;
+}
+
+#play > *{    
+    margin-bottom: 20px;
+}
+
+.fa-square-plus{
+    font-size: 30px;
+}
+
+#play h4{
+    margin-top: 10px;
+    font-size: 12px;
+    font-style: italic;
+    font-weight: lighter;
 }
 
 /******* REGOLE SEZIONE PLAYER********** */
 
 #player{
-    position: fixed;
+    position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 70px;
     background-color: rgb(68, 68, 68);
-    z-index: 400;
+    
+   
 }
